--- a/index.html
+++ b/index.html
@@ -224,15 +224,16 @@
 
           <div class="giaothua">
             <img src="./Image/bay-mam-ngu-qua-ngay-tet.jpg" alt="" />
-            <h1>Lì xì</h1>
+            <h1>Xuân hành</h1>
 
             <p>
-              Ngoài những điều trên thì lì xì cũng là một phong tục ý nghĩa của
-              dịp Tết cổ truyền. Đầu năm mới, người lớn sẽ mừng tuổi trẻ nhỏ
-              thông qua một phong bao lì xì sắc đỏ. Đi kèm với đó là lời chúc
-              ngoan ngoãn, hay ăn chóng lớn, học giỏi. Bên cạnh đó, con cái cũng
-              sẽ mừng tuổi cha mẹ cùng lời chúc sức khỏe, may mắn. Các cháu đã
-              trưởng thành mừng tuổi ông bà, chúc ông bà sức khỏe, trường thọ.
+              Xuất hành cũng là một việc quan trọng được người Việt thực hiện
+              vào dịp tết cổ truyền. Thông thường vào ngày mồng một, người ta sẽ
+              chọn giờ đẹp, hướng đẹp, hợp tuổi để xuất hành. Với mong muốn
+              hướng đi mới của năm sẽ mang lại khởi sắc, vận may và tài lộc cho
+              gia chủ. Người đi xuất hành thường sẽ là người trụ cột của gia
+              đình, người có trách nhiệm mang may mắn về để có thể gánh vác mọi
+              việc to nhỏ trong nhà.
             </p>
           </div>
         </div>
